tests/reject/match_non_exhaustive.ty
# A `match` must cover every variant of the scrutinee enum, or carry a `_` wildcard.
# Omitting a variant (here `B`) is a compile error in both compilers. tychoc0 used to
# accept it -- the emitted C is safe at runtime (it aborts "tycho: non-exhaustive
# match" if the missing variant is hit), but tychoc rejects it at COMPILE time, so an
# uncovered case shipped instead of being caught up front. Now both reject.
enum E:
    A(int)
    B
fn main():
    match A(5):
        A(v):
            print(str(v))
